feat: set base styles

--- a/src/scss/abstracts/_constants.scss
+++ b/src/scss/abstracts/_constants.scss
@@ -26,4 +26,4 @@ $mobile-width: 375px;
 
 // Typography
 
-$opensans-font: 'Proxima Nova', Verdana, sans-serif;
+$proxima-nova-font: 'Proxima Nova', Verdana, sans-serif;
