--- a/src/scss/abstracts/_constants.scss
+++ b/src/scss/abstracts/_constants.scss
@@ -4,7 +4,7 @@
 
 $color-primary-100: #4285f5;
 $color-body: #565a75;
-$color-color-light: #fff;
+$color-light: #fff;
 $color-disabled: #898da8;
 $color-title-active: #404357;
 $color-placeholder: #898da8;
