--- a/src/scss/base/_icons.scss
+++ b/src/scss/base/_icons.scss
@@ -2,6 +2,17 @@
   display: inline-block;
 }
 
+.ico__navigation {
+  margin-right: 16px;
+}
+
+.ico_active-rectangle {
+  position: absolute;
+  width: 4px;
+  height: 56px;
+  background-image: url('../assets/img/icons/Rectangle-638.svg');
+}
+
 .ico_home {
   width: 24px;
   height: 24px;
