--- a/src/scss/components/_navigation.scss
+++ b/src/scss/components/_navigation.scss
@@ -1,16 +1,24 @@
 @use '../abstracts/constants' as *;
 @use '../abstracts/mixins' as *;
+@use '../abstracts/functions' as *;
 
 .navigation {
   padding: 0;
   list-style: none;
 }
 
+.navigation__item_active {
+  background: $color-light;
+
+  a {
+    color: $color-primary-100;
+  }
+}
+
 .navigation__link {
   @include font(1rem, line-height(24px, 16px), 600, $color-label);
   display: flex;
   align-items: center;
-  color: $color-label;
-  //   padding: 0 10px;
+  padding: 16px 32px;
   text-decoration: none;
 }
