--- a/src/scss/base/_icons.scss
+++ b/src/scss/base/_icons.scss
@@ -54,3 +54,9 @@
   height: 24px;
   background-image: url('../assets/img/icons/sidebar/History.svg');
 }
+
+.ico_arrow {
+  width: 16px;
+  height: 16px;
+  background-image: url('../assets/img/icons/Arrow.svg');
+}
