--- a/src/scss/base/_icons.scss
+++ b/src/scss/base/_icons.scss
@@ -60,3 +60,9 @@
   height: 16px;
   background-image: url('../assets/img/icons/Arrow.svg');
 }
+
+.ico_etherium {
+  width: 32px;
+  height: 32px;
+  background-image: url('../assets/img/icons/ETH.svg');
+}
