--- a/src/scss/components/_cards.scss
+++ b/src/scss/components/_cards.scss
@@ -1,8 +1,8 @@
 @use '../abstracts' as *;
 
 .cards {
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
   gap: 32px;
 }
 
@@ -26,4 +26,6 @@
 
 .card__rate {
   @include font(rem(20px), line-height(24px, 20px), 600, $color-body);
+  margin: 0;
+  margin-top: 32px;
 }
