feat: update styles for 1280px layout

--- a/src/scss/layouts/_sidebar.scss
+++ b/src/scss/layouts/_sidebar.scss
@@ -1,7 +1,7 @@
 @use '../abstracts/constants' as *;
 
 .sidebar {
-  width: $sidebar-width;
+  min-width: $sidebar-width;
   padding-top: 32px;
   background: $color-background;
 }
