feat: create styles for 960px screens

--- a/src/scss/base/_icons.scss
+++ b/src/scss/base/_icons.scss
@@ -2,9 +2,9 @@
   display: inline-block;
 }
 
-.ico__navigation {
-  margin-right: 16px;
-}
+// .ico__navigation {
+//   margin-right: 16px;
+// }
 
 .ico_active-rectangle {
   position: absolute;
