--- a/src/scss/layouts/_wrapper.scss
+++ b/src/scss/layouts/_wrapper.scss
@@ -9,8 +9,7 @@
 
 .wrapper {
   width: 100%;
-  max-width: $main-width;
-  // margin: 0 auto;
-  padding: 0 48px;
-  // border: 1px solid;
+  max-width: $main-content-width;
+  margin: 0 auto;
+  padding: 0 32px;
 }
