--- a/src/scss/base/_logo.scss
+++ b/src/scss/base/_logo.scss
@@ -1,5 +1,18 @@
+@use '../abstracts/constants' as *;
+
+.logo {
+  width: 130px;
+  height: 16px;
+  background-image: url('../assets/img/Logotype.svg');
+
+  @media (max-width: $tablet-medium-width) {
+    width: 18px;
+    height: 16px;
+    background-image: url('../assets/img/sidebar-logo.svg');
+  }
+}
+
 .sidebar__logo {
   display: block;
-  margin: 0 auto;
-  padding: 16px 0;
+  margin: 16px auto 48px;
 }
