--- a/src/scss/components/_navigation.scss
+++ b/src/scss/components/_navigation.scss
@@ -22,3 +22,10 @@
   padding: 16px 32px;
   text-decoration: none;
 }
+
+.navigation__text {
+  margin-left: 16px;
+  @media (max-width: $tablet-medium-width) {
+    display: none;
+  }
+}
