--- a/src/scss/components/_navigation.scss
+++ b/src/scss/components/_navigation.scss
@@ -8,11 +8,19 @@
 }
 
 .navigation__item_active {
-  background: $color-light;
+  background: $color-off-white;
 
   a {
     color: $color-primary-100;
   }
+
+  @media (max-width: $tablet-medium-width) {
+    background: none;
+  }
+}
+
+.navigation__ico_active {
+  stroke: red;
 }
 
 .navigation__link {
@@ -21,10 +29,16 @@
   align-items: center;
   padding: 16px 32px;
   text-decoration: none;
+
+  @media (max-width: $tablet-medium-width) {
+    justify-content: center;
+    padding: 16px 12px;
+  }
 }
 
 .navigation__text {
   margin-left: 16px;
+
   @media (max-width: $tablet-medium-width) {
     display: none;
   }
