--- a/src/scss/components/_cards.scss
+++ b/src/scss/components/_cards.scss
@@ -8,6 +8,10 @@
   @media (max-width: $tablet-big-width) {
     grid-template-columns: repeat(3, 1fr);
   }
+
+  @media (max-width: $tablet-width) {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
 
 .card {
