--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -7,6 +7,7 @@
 body {
   @extend %font-primary;
   @include font(1rem, line-height(28px, 18px), 400, $color-body);
+  min-height: 100vh;
 }
 
 h1 {
