feat: set cards columns to 1 for mobile screens

--- a/src/scss/abstracts/_constants.scss
+++ b/src/scss/abstracts/_constants.scss
@@ -22,6 +22,7 @@ $main-content-width: 1024px;
 $tablet-big-width: 960px;
 $tablet-medium-width: 840px;
 $tablet-width: 640px;
+$mobile-big-width: 440px;
 $mobile-width: 375px;
 
 // Typography
