--- a/src/scss/layouts/_header.scss
+++ b/src/scss/layouts/_header.scss
@@ -1,9 +1,44 @@
+@use '../abstracts/constants' as *;
+
 .header {
+  @media (max-width: $mobile-width) {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+  }
+}
+
+.header__button-open-nav {
+  display: none;
+  margin-top: 8px;
+  background: none;
+  border: 0;
+  cursor: pointer;
+
+  @media (max-width: $mobile-width) {
+    display: block;
+  }
+}
+
+.burger-icon {
+  pointer-events: none;
+}
+
+.header__header-wrapper {
   display: flex;
   align-items: center;
   justify-content: space-between;
+
+  @media (max-width: $mobile-width) {
+    flex-direction: column;
+    align-items: flex-start;
+  }
 }
 
 .header__main {
   margin: 40px 0 32px;
+
+  @media (max-width: $mobile-width) {
+    margin: 40px 0 24px;
+  }
 }
