--- a/src/scss/components/_sort-by.scss
+++ b/src/scss/components/_sort-by.scss
@@ -6,7 +6,7 @@
 }
 
 .sort-by__header {
-  @media (max-width: $mobile-width) {
+  @media (max-width: $mobile-big-width) {
     margin-top: 32px;
   }
 }
