--- a/src/scss/components/_navigation.scss
+++ b/src/scss/components/_navigation.scss
@@ -5,6 +5,13 @@
 .navigation {
   padding: 0;
   list-style: none;
+
+  @media (max-width: $mobile-big-width) {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-left: 24px;
+  }
 }
 
 .navigation__item_active {
@@ -12,6 +19,10 @@
 
   a {
     color: $color-primary-100;
+
+    @media (max-width: $tablet-width) {
+      color: $color-label;
+    }
   }
 
   @media (max-width: $tablet-medium-width) {
@@ -23,6 +34,12 @@
   @media (max-width: $tablet-medium-width) {
     rect {
       stroke: $color-primary-100;
+    }
+  }
+
+  @media (max-width: $mobile-big-width) {
+    rect {
+      stroke: $color-label;
     }
   }
 }
@@ -38,6 +55,11 @@
     justify-content: center;
     padding: 16px 12px;
   }
+
+  @media (max-width: $tablet-width) {
+    justify-content: center;
+    padding: 16px 0;
+  }
 }
 
 .navigation__text {
@@ -45,5 +67,9 @@
 
   @media (max-width: $tablet-medium-width) {
     display: none;
+  }
+
+  @media (max-width: $mobile-big-width) {
+    display: block;
   }
 }
