--- a/src/scss/layouts/_sidebar.scss
+++ b/src/scss/layouts/_sidebar.scss
@@ -15,10 +15,21 @@
     top: 100px;
     right: 0;
     bottom: 0;
-    // border: 3px solid;
-    display: none;
+    left: 100%;
     width: 100vw;
     min-width: $sidebar-tablet-width;
     background: $color-off-white;
+    border: 3px solid;
+    transform: translateX(0);
+    // transform: translateX(-100%);
+    transition: transform 2500ms;
   }
+}
+
+.navigation-open {
+  transform: translateX(-100%);
+}
+
+.disable-scroll {
+  overflow: hidden;
 }
