--- a/src/scss/components/_navigation.scss
+++ b/src/scss/components/_navigation.scss
@@ -10,6 +10,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    margin-top: 75px;
     margin-left: 24px;
   }
 }
