--- a/src/scss/layouts/_sidebar.scss
+++ b/src/scss/layouts/_sidebar.scss
@@ -12,17 +12,17 @@
 
   @media (max-width: $mobile-big-width) {
     position: fixed;
-    top: 100px;
+    top: 0;
     right: 0;
     bottom: 0;
     left: 100%;
     width: 100vw;
     min-width: $sidebar-tablet-width;
     background: $color-off-white;
-    border: 3px solid;
+    // border: 3px solid;
     transform: translateX(0);
     // transform: translateX(-100%);
-    transition: transform 2500ms;
+    transition: transform 500ms;
   }
 }
 
@@ -32,4 +32,34 @@
 
 .disable-scroll {
   overflow: hidden;
+}
+
+.sidebar__button-close-nav {
+  display: flex;
+  display: none;
+  align-items: center;
+  justify-content: center;
+  width: 32px;
+  height: 32px;
+  margin-top: 8px;
+  margin-right: 24px;
+  background: $color-background;
+  border: 0;
+  border-radius: 12px;
+  cursor: pointer;
+
+  @media (max-width: $mobile-big-width) {
+    display: block;
+  }
+}
+
+.cross-icon {
+  pointer-events: none;
+}
+
+.sidebar-nav {
+  @media (max-width: $mobile-big-width) {
+    display: flex;
+    justify-content: space-between;
+  }
 }
