feat: make price filter arrow icon reverse on click

--- a/src/scss/base/_icons.scss
+++ b/src/scss/base/_icons.scss
@@ -85,6 +85,10 @@
   background-image: url('../assets/img/icons/Arrow.svg');
 }
 
+.ico_arrow-reverse {
+  transform: rotate(180deg);
+}
+
 .ico_etherium {
   width: 32px;
   height: 32px;
